2012-12-21  Christopher Faylor  <me.cygwin2012@cgf.cx>

	Revert the reversion and go with implementation described in
	cgf-000017, with some modifications.
	* init.cc (dll_entry): Revert previous change.
	* miscfuncs.cc: Include sigproc.h for exit_thread declaration.
	* winsup.h (ExitThread): Define as 'exit_thread' to ensure no
	accidental use.
	* sigproc.cc (exit_thread): New function.
	(wait_sig): Handle __SIGTHREADEXIT case.  Don't just block rather than
	returning from this function.
	* sigproc.h (__SIGTHREADEXIT): New enum.
	(exit_thread): Declare.
	* sync.cc (muto::release): Accept a tls command-line argument.
	* sync.h (muto::release): Accept a tls command-line parameter.  Default
	to &_my_tls.

	* cygerrno.h (__set_errno): Define as extern so that no function code
	is ever emitted.
	* cygserver_ipc.h (cygserver_ipc.h): Ditto.
	* miscfuncs.h (transform_chars): Ditto.
	* path.h (has_attribute): Ditto.
	* security.h (privilege_luid): Ditto.
	* winsup.h (flush_file_buffers): Ditto.

2012-12-21  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* DevNotes: Add entry cgf-000018.
	* init.cc (dll_entry): Grab process lock before exiting to ensure that
	thread doesn't exit before parent if parent is exiting.
	* _cygtls.cc (_cygtls::call2): Revert previous 2012-12-21 change.
	* miscfuncs.cc (thread_wrapper): Ditto.
	* thread.cc (pthread::exit): Ditto.
	* sigproc.cc (exit_thread): Ditto.
	(wait_sig): Ditto.
	* sync.cc (muto::release): Ditto.
	* sync.h (muto::release): Ditto.
	* sigproc.h (__SIGTHREADEXIT): Delete enum.
	(exit_thread): Delete declaration.

2012-12-21  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* DevNotes: Add entry cgf-000017.
	* _cygtls.cc (_cygtls::call2): Use new exit_thread function in place of
	ExitThread.
	* miscfuncs.cc (thread_wrapper): Ditto.
	* thread.cc (pthread::exit): Ditto.
	(pthread_mutex::unlock): Set tid to NULL rather than 0.
	(pthread_spinlock::unlock): Ditto.
	* pinfo.cc (commune_process): Actually call lock_process constructor.